--- a/hw-theory.tex
+++ b/hw-theory.tex
@@ -29,7 +29,7 @@
 \begin{document}
 
 \begin{center}{\Large\textsc{\textbf{Теоретические домашние задания}}}\\
-             \it Теория типов, ИТМО, совместно М3232-М3239 и M3332-M3339, весна 2025 года\end{center}
+             \it Теория типов, ИТМО, М3232-М3239, весна 2025 года\end{center}
 
 \section*{Домашнее задание №1: лямбда исчисление --- бестиповое и просто-типизированное}
 
