--- a/hw-theory.tex
+++ b/hw-theory.tex
@@ -211,4 +211,13 @@ $A = \lambda x^\sigma.P$, & $B = \lambda x^\sigma.P'$ при $P \rightarrow_\bet
 \end{enumerate}
 \end{enumerate}
 
+\section*{Домашнее задание №2: теорема о сильной нормализуемости просто типизированного лямбда-исчисления}
+
+\begin{enumerate}
+\item Найдите $\llbracket\alpha\rightarrow\alpha\rrbracket$ и $\llbracket(\alpha\rightarrow\alpha)\rightarrow\alpha\rrbracket$.
+\item Покажите, что $\llbracket\alpha\rrbracket$ насыщенное, 
+и что если $\mathcal{A}$ и $\mathcal{B}$ насыщены, то $\mathcal{A}\rightarrow\mathcal{B}$ насыщенное.
+\item Покажите, что SN --- насыщенное (постройте полноценные рассуждения по индукции для определения).
+\end{enumerate}
+
 \end{document}
