Added lecture 03 matherials and home work

--- a/lection-03.tex
+++ b/lection-03.tex
@@ -460,6 +460,7 @@ $$
 
 \end{frame}
 
+\begin{comment}
 \begin{frame}{Алгоритм реконструкции типа W}
 На вход подаются $\Gamma,\ M$, на выходе наиболее общая пара: $\langle S, \tau \rangle = W(\Gamma,M)$
 \begin{enumerate}
@@ -549,6 +550,7 @@ public abstract class Enum<E extends Enum<E>>
 $\ge3$ & & неразрешимо
 \end{tabular}
 \end{frame}
+\end{comment}
 
 \end{document}
 \end{document}
