--- a/hw-theory.tex
+++ b/hw-theory.tex
@@ -630,5 +630,21 @@ $|B|=\beta$.
 библиотеки\\ \verb!Relation/Equivalence.ard!, тип данных \verb!Quotient!) в факторизованное имеет частичную обратную, то выполнена аксиома выбора.
 \end{enumerate}
 
+\section*{Список лабораторных работ для сдачи зачёта по ТТ}
+\begin{enumerate}
 
+\item Перенесите на язык Аренд парадокс Жирара.
+\url{https://www.cs.princeton.edu/courses/archive/fall07/cos595/stdlib/html/Coq.Logic.Hurkens.html}
+
+\item Перенесите на язык Аренд доказательство теоремы об останове.
+
+\item Напишите вывод типов для системы типов с линейными типами
+%(в стиле статьи). 
+%На вход вашей программе подаётся текст в виде лямбда-выражения
+%в следующем синтаксисе:
+%\item Напишите программу, (Pizza?)
+
+\item Напишите интерпретатор лямбда-исчисления с использованием CAM (Абстрактной Категорной Машины).
+
+\end{enumerate}
 \end{document}
