Added CAM reference

--- a/hw-theory.tex
+++ b/hw-theory.tex
@@ -645,6 +645,7 @@ $|B|=\beta$.
 %\item Напишите программу, (Pizza?)
 
 \item Напишите интерпретатор лямбда-исчисления с использованием CAM (Абстрактной Категорной Машины).
+Описание машины см. V.E. Wolfengagen. Combinatory Logic in Programming (глава 21).
 
 \end{enumerate}
 \end{document}
