--- a/lection-12.tex
+++ b/lection-12.tex
@@ -80,7 +80,7 @@
 \item $G(\alpha)$ или $\Box\alpha$: утверждение $\alpha$ выполнено в любой момент (начиная с текущего).
 \item $P(\alpha)$ или $\bigcirc\alpha$: утверждение $\alpha$ выполнено в следующий момент.
 \item $E(\alpha)$ или $\Diamond\alpha$: утверждение $\alpha$ неизбежно выполнено в будущем, в какой-то момент (начиная с текущего).
-\item $U(\alpha,\beta)$ или $\alpha\mathcal{U}\beta$: утверждение $\alpha$ истинно, пока $\alpha$ не станет истинным,
+\item $U(\alpha,\beta)$ или $\alpha\mathcal{U}\beta$: утверждение $\alpha$ истинно, пока $\beta$ не станет истинным,
 после чего $\alpha$ может быть любым.
 \end{enumerate}
 \end{itemize}
