Improved lab. task

--- a/hw-theory.tex
+++ b/hw-theory.tex
@@ -634,7 +634,14 @@ $|B|=\beta$.
 \begin{enumerate}
 
 \item Перенесите на язык Аренд парадокс Жирара.
+Задачу можно решать в одной из двух постановок:
+\begin{enumerate}
+\item Воспользоваться доказательством с лекции.
+\item Воспользоваться доказательством, формализованным для языка Coq, как образцом:
 \url{https://www.cs.princeton.edu/courses/archive/fall07/cos595/stdlib/html/Coq.Logic.Hurkens.html}
+Однако, данное доказательство использует несколько другую технику (относительно рассказанной на лекции), 
+в частности <<сильные>> универсумы.
+\end{enumerate}
 
 \item Перенесите на язык Аренд доказательство теоремы об останове.
 
