--- a/hw-theory.tex
+++ b/hw-theory.tex
@@ -645,14 +645,39 @@ $|B|=\beta$.
 
 \item Перенесите на язык Аренд доказательство теоремы об останове.
 
-\item Напишите вывод типов для системы типов с линейными типами
+\item Напишите вывод типов для системы типов с линейными типами.
+Описание алгоритма см.:
+Edsko de Vries, Rinus Plasmeijer, David M Abrahamson. Uniqueness Typing Simpliﬁed.
+
+На вход вашей программе даётся просто-типизированное лямбда-выражение
+(в качестве символа $\lambda$ используйте обратный слэш).
+\begin{enumerate}
+\item Выведите для него типы, с учётом расширения системы на уникальные типы
+(добавьте атрибуты уникальности к типам и выводите их).
+
+\item Добавьте синтаксис для задания атрибутов и уникальности.
+
+\item Каким образом в этом языке можно записать \verb!FnOnce! из Раста?
+\end{enumerate}
+
 %(в стиле статьи). 
 %На вход вашей программе подаётся текст в виде лямбда-выражения
 %в следующем синтаксисе:
 %\item Напишите программу, (Pizza?)
 
-\item Напишите интерпретатор лямбда-исчисления с использованием CAM (Абстрактной Категорной Машины).
-Описание машины см. V.E. Wolfengagen. Combinatory Logic in Programming (глава 21).
+\item Напишите интерпретатор для лямбда-выражений с использованием CAM (Абстрактной Категорной Машины).
+Описание машины см:
+\begin{enumerate}
+\item V.E. Wolfengagen. Combinatory Logic in Programming (глава 21).
+\item G. Cousineau, P.-L. Curien, M. Mauny. The Categorical Abstract Machine.
+\end{enumerate}
+
+\item Используя реализацию вещественных чисел в Аренде, докажите, что:
+\begin{enumerate}
+\item $(x^2)' = 2x$;
+\item Покажите, что $\sum_{n} \frac{1}{2^n} = 1$;
+\item Определите $\sin$ и $\cos$ через ряды и покажите, что $(\sin x)' = -\cos x$.
+\end{enumerate}
 
 \end{enumerate}
 \end{document}
