Updated materials for the course

--- a/hw-theory.tex
+++ b/hw-theory.tex
@@ -630,6 +630,26 @@ $|B|=\beta$.
 библиотеки\\ \verb!Relation/Equivalence.ard!, тип данных \verb!Quotient!) в факторизованное имеет частичную обратную, то выполнена аксиома выбора.
 \end{enumerate}
 
+\section*{Домашнее задание №8: типовые системы вне лямбда-куба}
+\begin{enumerate}
+\item Покажите следующие линейные тождества:
+\begin{enumerate}
+\item $\vdash \phi \multimap \phi$ и $\vdash \ !\phi \multimap \ !!\phi$
+\item $!(\alpha\&\beta) \leftrightarrow\ !\alpha\otimes!\beta$ (надо построить два доказательства, $\varphi\vdash\psi$ и $\psi\vdash\varphi$)
+\end{enumerate}
+
+\item Дистрибутивность в линейной логике:
+\begin{enumerate}
+\item Выполняется ли дистрибутивность для $(\&)$ и $(\oplus)$?
+\item Выполняется ли дистрибутивность для $(\&)$ и $(\otimes)$?
+\end{enumerate}
+
+\item В системе $F_{<:}$ определим тип $\bot$: такой тип, что для всех $\alpha$ выполнено $\bot <: \alpha$. Покажите, что тип $\bot$ необитаем.
+
+\item Запишите операцию инкремента в лямбда-исчислении, перенесите её на язык Категорной абстрактной машины,
+и вычислите результат.
+\end{enumerate}
+
 \section*{Список лабораторных работ для сдачи зачёта по ТТ}
 \begin{enumerate}
 
